fixed The buying platform text should be in bold format on firefox browser

--- a/app/assets/stylesheets/campaign_create.less
+++ b/app/assets/stylesheets/campaign_create.less
@@ -1287,7 +1287,7 @@
         }
         p {
           color: #21252b;
-          font-family: "Avenir-black";
+          font-family: "Avenir-bold";
           font-size: 14px;
           width: 100%;
           text-align: center;
