--- a/app/assets/stylesheets/workflow_master.less
+++ b/app/assets/stylesheets/workflow_master.less
@@ -1082,7 +1082,7 @@
     }
     p {
       color: #21252b;
-      font-family: "Avenir-black";
+      font-family: "Avenir-bold";
       font-size: 14px;
       width: 100%;
       text-align: center;
